--- a/styles/custom.css
+++ b/styles/custom.css
@@ -487,13 +487,15 @@ a#logo {
   font-size: 16px;
   margin-top: 0px;
 }
-.portfolio-item .thumb-inner p {
+.portfolio-item .thumb-inner p,
+.portfolio-item .thumb-inner a {
   opacity: 0;
   visibility: hidden;
   position: absolute;
   margin-bottom: 0px;
 }
-.portfolio-item:hover .thumb-inner p {
+.portfolio-item:hover .thumb-inner p,
+.portfolio-item:hover .thumb-inner a {
   position: relative;
   opacity: 1;
   visibility: visible;
@@ -508,4 +510,73 @@ a#logo {
    margin-top: 30%;
   color: #1e1e1e;
   margin-bottom: 20px;
+}
+
+.thumb-button {
+  align-items: center;
+  appearance: none;
+  background-color: #fff;
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+  box-sizing: border-box;
+  color: #3c4043;
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform,opacity;
+  z-index: 0;
+  margin-top: 10px;
+}
+
+.thumb-button:hover {
+  background: #b0b0b0;
+  color: #174ea6;
+}
+
+.thumb-button:active {
+  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+  outline: none;
+}
+
+.thumb-button:focus {
+  outline: none;
+  border: 2px solid #4285f4;
+}
+
+.thumb-button:not(:disabled) {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.thumb-button:not(:disabled):hover {
+  box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
+}
+
+.thumb-button:not(:disabled):focus {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.thumb-button:not(:disabled):active {
+  box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
+}
+
+.thumb-button:disabled {
+  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
